--- a/Project_2/CMakeLists.txt
+++ b/Project_2/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_C_STANDARD 11)
 set(SOURCE_FILES
         src/main.c
         src/scanner.h
-        src/scanner.c)
+        src/Scanner2.c)
 
 include_directories(AFTER src)
 
